<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_minitest"
            android:icon="@drawable/baseline_ballot_black_18dp"
            android:title="Minitest" />
        <item
            android:id="@+id/nav_fulltest"
            android:icon="@drawable/baseline_event_available_black_18dp"
            android:title="Fulltest" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/round_settings_black_24dp"
            android:title="@string/menu_tools" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/baseline_star_black_18dp"
                android:title="Rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/round_help_black_24dp"
                android:title="Info" />
        </menu>
    </item>


</menu>
